--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div class="container container-fluid">
       <ul class="nav nav-tabs">
         <li>
-          <%= link_to root_path do %>
+          <%= link_to current_user ? soc_books_path : root_path do %>
             <span class='glyphicon glyphicon-bookmark' style="font-size: 2em;"><b>SocBook</b></span>
           <% end %>
         </li>
